// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInlineEditForm edit mode editModeProps.cancelButtonProps 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Edit inline"
                class="euiFieldText emotion-euiFieldText-fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Uh no. Do not save."
            class="euiButtonIcon emotion-euiButtonIcon-m-base-disabled-isDisabled"
            data-test-subj="euiInlineEditModeCancelButton"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm edit mode editModeProps.formRowProps 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        data-test-subj="customErrorText"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Edit inline"
                class="euiFieldText emotion-euiFieldText-fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm edit mode editModeProps.inputProps 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
                for="generated-id"
              >
                Prepend Example
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
            >
              <input
                aria-label="Edit inline"
                class="euiFieldText emotion-euiFieldText-fullWidth-inGroup"
                data-test-subj="customInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm edit mode editModeProps.saveButtonProps 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Edit inline"
                class="euiFieldText emotion-euiFieldText-fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Yes! Let's save."
            class="euiButtonIcon emotion-euiButtonIcon-m-base-primary"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm edit mode isInvalid 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <input
                aria-invalid="true"
                aria-label="Edit inline"
                class="euiFieldText emotion-euiFieldText-fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  color="danger"
                  data-euiicon-type="warning"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm edit mode isLoading 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <input
                aria-label="Edit inline"
                class="euiFieldText euiFieldText-isLoading emotion-euiFieldText-fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  aria-label="Loading"
                  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
                  role="progressbar"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="true"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="emotion-euiScreenReaderOnly"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            role="status"
          >
            Loading 
          </div>
          <div
            aria-atomic="true"
            aria-hidden="true"
            aria-live="off"
            role="status"
          />
        </div>
        <div
          aria-label="Loading "
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
          role="progressbar"
        >
          <div
            aria-busy="true"
            data-test-subj="euiSkeletonLoadingAriaWrapper"
          >
            <div
              aria-label="Loading "
              class="euiSkeletonRectangle emotion-euiSkeletonGradientAnimation-euiSkeletonRectangle-m"
              role="progressbar"
              style="inline-size: 40px; block-size: 40px;"
            />
          </div>
          <div
            aria-busy="true"
            data-test-subj="euiSkeletonLoadingAriaWrapper"
          >
            <div
              aria-label="Loading "
              class="euiSkeletonRectangle emotion-euiSkeletonGradientAnimation-euiSkeletonRectangle-m"
              role="progressbar"
              style="inline-size: 40px; block-size: 40px;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm edit mode placeholder 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Edit inline"
                class="euiFieldText emotion-euiFieldText-fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                placeholder="This is a placeholder."
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm edit mode renders 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-stretch-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow emotion-euiFormRow-fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
          >
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-label="Edit inline"
                class="euiFieldText emotion-euiFieldText-fullWidth"
                data-test-subj="euiInlineEditModeInput"
                id="generated-id"
                type="text"
                value="Hello World!"
              />
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="inlineEdit_generated-id"
      >
        Press Enter to save your edited text. Press Escape to cancel your edit.
      </span>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        aria-busy="false"
        data-test-subj="euiSkeletonLoadingAriaWrapper"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
        >
          <button
            aria-label="Save edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-success"
            data-test-subj="euiInlineEditModeSaveButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="check"
            />
          </button>
          <button
            aria-label="Cancel edit"
            class="euiButtonIcon emotion-euiButtonIcon-m-base-danger"
            data-test-subj="euiInlineEditModeCancelButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiInlineEditForm read mode isReadOnly 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-flush-both-isDisabled-euiInlineEditReadMode-isReadOnly"
    data-test-subj="euiInlineReadModeButton"
    disabled=""
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        Hello World!
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  />
</div>
`;

exports[`EuiInlineEditForm read mode placeholder 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-flush-both-euiInlineEditReadMode-hasPlaceholder"
    data-test-subj="euiInlineReadModeButton"
    title="This is a placeholder."
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        This is a placeholder.
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditForm read mode readModeProps 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-primary-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        Hello World!
      </span>
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditForm read mode renders 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        Hello World!
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;

exports[`EuiInlineEditForm read mode sizes 1`] = `
<div
  aria-label="aria-label"
  class="euiInlineEdit testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <button
    aria-describedby="inlineEdit_generated-id"
    class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-flush-both-euiInlineEditReadMode"
    data-test-subj="euiInlineReadModeButton"
    title="Hello World!"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
    >
      <span
        class="eui-textTruncate euiButtonEmpty__text"
      >
        Hello World!
      </span>
      <span
        color="inherit"
        data-euiicon-type="pencil"
      />
    </span>
  </button>
  <span
    hidden=""
    id="inlineEdit_generated-id"
  >
    Click to edit this text inline.
  </span>
</div>
`;
